--- a/be/package.json
+++ b/be/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  
   "scripts": {
     "start": "nodemon server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,11 +14,22 @@
     "cors": "^2.8.5",
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
+    "module-alias": "^2.2.2",
     "mongoose": "^6.1.8",
     "socket.io": "^4.4.1",
     "ts-node": "^10.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13"
+  },
+  "_moduleAliases": {
+    "~": ".",
+    "config": "config",
+    "controllers": "controllers",
+    "services": "services",
+    "middleware": "middleware",
+    "models": "models",
+    "routers": "routers",
+    "utils": "utils"
   }
 }
